# hackwizards

./: README.md
backend/: .gitignore  ai_analyzer.py  db.py  face_analyzer.py  main.py  pyproject.toml  video_extractor.py
frontend/src/: App.css  App.jsx
